--- a/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingCalendar/mobileAppointmentBookingCalendar.css
+++ b/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingCalendar/mobileAppointmentBookingCalendar.css
@@ -1,3 +1,9 @@
+.calendar-nav-header{
+    margin-top: 10px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    align-items: center;
+}
 .selectedDay {
     border-radius: 50%;
     color: #FFFF;
@@ -45,8 +51,8 @@
 }
 .monthButton{
     height: 24px;
-    font-size: 20px;
-    font-weight: 600;
+    font-size: 18px;
+    font-weight: 500;
     letter-spacing: 0.38px;
     line-height: 24px;
     display: flex;
@@ -101,7 +107,7 @@ th {
 }
 .leftButton{
     margin-left: 0px;
-    margin-right: 38px;
+    margin-right: 8px;
     padding-left: 0px;
     padding-right: 0px;
     position: relative;
@@ -110,19 +116,25 @@ th {
 .slds-popover{
     z-index: 9000;
 }
+
 .modal {
-    width: 99%;
-    height: 100%;
+    position: fixed;
+    top: auto;
+    bottom: 0px;
+    left: 0px;
+    height: 99%;
+    overflow-y: auto;
 }
 .breakLine {
     margin: 0;
-    margin: 16px 0;
+    margin: 0 -16px 5px -16px;
+    padding-bottom: 16px;
 }
 .full-calendar-close-btn{
-    --lwc-colorTextIconDefault: #0D7FA8;
+    cursor: pointer;
 }
 .select-a-date-title{
-    font-weight: 600;
+    font-weight: 500;
     font-size: 18px;
     line-height: 21px;
 }
@@ -140,8 +152,10 @@ th {
     align-self: stretch;
     flex-grow: 0;
     border-top: 1px solid rgba(159, 170, 181, 0.5);
-    position: sticky;
+    position: fixed;
     bottom: 0;
+    left: 0;
+    right: 0;
     background-color: white;
     z-index: 100;
     padding-bottom: 24px;
@@ -155,13 +169,24 @@ th {
     font-size: 16px;
     border-radius: 12px;
     background-color: #0D7FA8;
-    font-weight: 600;
+    font-weight: 500;
 }
 .dialogContainer{
-    padding-bottom: 0;
+    padding-bottom: 80px;
+    height: 99vh;
 }
 @media screen and (orientation:landscape) { 
     .slds-modal__container{
         height: 130vh !important;
     } 
+}
+
+.changecolor{
+    --lwc-colorTextIconDefault: #0D7FA8;
+    fill:#0D7FA8;
+    --sds-c-icon-color-foreground-default: #0D7FA8;
+}
+
+.scrollableweek{
+    overflow-y: auto;
 }
