244 features and fixes

--- a/FindNearby/force-app/main/default/lwc/mapFilters/mapFilters.css
+++ b/FindNearby/force-app/main/default/lwc/mapFilters/mapFilters.css
@@ -158,6 +158,10 @@
     padding: 12px;
 }
 
+select {
+    height: 48px;
+}
+
 .filters-sheet-show-results, .filters-sheet-clear {
     height: 48px;
     font-size: 16px;
