--- a/FindNearby/force-app/main/default/lwc/locationsList/locationsList.css
+++ b/FindNearby/force-app/main/default/lwc/locationsList/locationsList.css
@@ -148,3 +148,21 @@ button {
     pointer-events: all;
     position: absolute;
 }
+
+.list-spinner {
+    margin-top: 24px;
+    left: calc(50% - 24px);
+    position: absolute;
+    animation: spin 2s linear infinite;
+    -webkit-animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    from { transform: rotate(0deg); }
+    to { transform: rotate(360deg); }
+}
+
+@-webkit-keyframes spin {
+    from { transform: rotate(0deg); }
+    to { transform: rotate(360deg); }
+}
