--- a/UploadAndAnnotateImages/force-app/main/default/lwc/imageAnnotate/imageAnnotate.css
+++ b/UploadAndAnnotateImages/force-app/main/default/lwc/imageAnnotate/imageAnnotate.css
@@ -2,38 +2,38 @@
   --slds-c-button-outline-brand-color-background: transparent;
   --slds-c-button-outline-brand-color-background-active: transparent;
   --slds-c-button-outline-brand-color-background-hover: transparent;
-  --slds-c-button-outline-brand-color-border: #32BEF1;
-  --slds-c-button-outline-brand-color-border-hover: #32BEF1;
-  --slds-c-button-stateful-color-background-selected: #32BEF1;
-  --slds-c-button-stateful-color-background-selected-active: #32BEF1;
-  --slds-c-button-stateful-color-background-selected-hover: #32BEF1;
-  --slds-c-button-stateful-color-border-selected: #32BEF1;
-  --slds-c-button-stateful-color-border-selected-hover: #32BEF1;
-  --slds-c-button-text-color: #32BEF1;
-  --slds-c-button-text-color-active: #32BEF1;
-  --slds-c-button-text-color-hover: #32BEF1;
+  --slds-c-button-outline-brand-color-border: #1b96ff;
+  --slds-c-button-outline-brand-color-border-hover: #1b96ff;
+  --slds-c-button-stateful-color-background-selected: #1b96ff;
+  --slds-c-button-stateful-color-background-selected-active: #1b96ff;
+  --slds-c-button-stateful-color-background-selected-hover: #1b96ff;
+  --slds-c-button-stateful-color-border-selected: #1b96ff;
+  --slds-c-button-stateful-color-border-selected-hover: #1b96ff;
+  --slds-c-button-text-color: #1b96ff;
+  --slds-c-button-text-color-active: #1b96ff;
+  --slds-c-button-text-color-hover: #1b96ff;
   --slds-c-button-radius-border: 0.75rem;
   --slds-c-button-sizing-border: 2px;
 }
 
-button[disabled=true] {
-  color: #F4F4F4;
+button[disabled="true"] {
+  color: #f4f4f4;
 }
 
 .selected-button {
-  color: #FFFFFF;
-  background-color: #32BEF1;
+  color: #ffffff;
+  background-color: #1b96ff;
 }
 
 .icon-button {
-  color: #32BEF1;
-  border-color: #32BEF1;
+  color: #1b96ff;
+  border-color: #1b96ff;
   border-width: var(--slds-c-button-sizing-border, 2px);
   border-radius: var(--slds-c-button-radius-border, 0.75rem);
 }
 
 .dark-dropdown {
-  background-color: #1E1E1E;
+  background-color: #1e1e1e;
   border-width: 0;
   border-radius: var(--slds-c-button-radius-border, 0.75rem);
   margin-bottom: 8px;
@@ -43,26 +43,27 @@ button[disabled=true] {
   padding-right: 2rem;
 }
 
-.dark-dropdown > ul > li > a:hover, .dark-dropdown > ul > li > a:focus {
+.dark-dropdown > ul > li > a:hover,
+.dark-dropdown > ul > li > a:focus {
   background-color: transparent;
 }
 
 .white-dropdown-item {
-  color: #FFFFFF;
+  color: #ffffff;
   display: inline-flex;
 }
 
 .white-dropdown-item > svg {
-  --slds-c-icon-color-foreground: #FFFFFF;
+  --slds-c-icon-color-foreground: #ffffff;
 }
 
 .red-dropdown-item {
-  color: #FF3B30;
+  color: #ff3b30;
   display: inline-flex;
 }
 
 .red-dropdown-item > svg {
-  --slds-c-icon-color-foreground: #FF3B30;
+  --slds-c-icon-color-foreground: #ff3b30;
 }
 
 .selected-dropdown-item {
@@ -70,7 +71,7 @@ button[disabled=true] {
 }
 
 .remove-dropdown-item {
-  border-top: 1px #9FAAB580 solid;
+  border-top: 1px #9faab580 solid;
 }
 
 img {
