--- a/UploadAndAnnotateImages/force-app/main/default/lwc/imageCropper/imageCropper.css
+++ b/UploadAndAnnotateImages/force-app/main/default/lwc/imageCropper/imageCropper.css
@@ -1,12 +1,14 @@
 /* Ensure the size of the image fit the container perfectly */
 img {
-    display: block;
-  
-    /* This rule is very important, please don't ignore this */
-    max-width: 100%;
+  display: block;
+
+  /* This rule is very important, please don't ignore this */
+  max-width: 100%;
 }
 
-.rotate-button:focus, .rotate-button:hover, .rotate-button:active {
+.rotate-button:focus,
+.rotate-button:hover,
+.rotate-button:active {
   box-shadow: none;
   -webkit-box-shadow: none;
   border-color: transparent;
@@ -35,10 +37,6 @@ img {
   flex: 0 1 auto;
 }
 
-
-
-
-
 /* Static Resources are not supported yet on mobile, pasting the entire CSS of CropperJS */
 /*!
  * Cropper.js v1.5.12
@@ -50,7 +48,7 @@ img {
  * Date: 2021-06-12T08:00:11.623Z
  */
 
- .cropper-container {
+.cropper-container {
   direction: ltr;
   font-size: 0;
   line-height: 0;
@@ -148,7 +146,7 @@ img {
 .cropper-center::before,
 .cropper-center::after {
   background-color: #eee;
-  content: ' ';
+  content: " ";
   display: block;
   position: absolute;
 }
@@ -302,7 +300,7 @@ img {
 .cropper-point.point-se::before {
   background-color: #39f;
   bottom: -50%;
-  content: ' ';
+  content: " ";
   display: block;
   height: 200%;
   opacity: 0;
@@ -316,7 +314,7 @@ img {
 }
 
 .cropper-bg {
-  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQAQMAAAAlPW0iAAAAA3NCSVQICAjb4U/gAAAABlBMVEXMzMz////TjRV2AAAACXBIWXMAAArrAAAK6wGCiw1aAAAAHHRFWHRTb2Z0d2FyZQBBZG9iZSBGaXJld29ya3MgQ1M26LyyjAAAABFJREFUCJlj+M/AgBVhF/0PAH6/D/HkDxOGAAAAAElFTkSuQmCC');
+  background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQAQMAAAAlPW0iAAAAA3NCSVQICAjb4U/gAAAABlBMVEXMzMz////TjRV2AAAACXBIWXMAAArrAAAK6wGCiw1aAAAAHHRFWHRTb2Z0d2FyZQBBZG9iZSBGaXJld29ya3MgQ1M26LyyjAAAABFJREFUCJlj+M/AgBVhF/0PAH6/D/HkDxOGAAAAAElFTkSuQmCC");
 }
 
 .cropper-hide {
