--- a/UploadAndAnnotateImages/force-app/main/default/lwc/imageSelector/imageSelector.css
+++ b/UploadAndAnnotateImages/force-app/main/default/lwc/imageSelector/imageSelector.css
@@ -1,68 +1,97 @@
 lightning-input {
-    /* The lightning-input has a label above it that takes 32px of white space in iOS, */
-    /* and 24px in Android, so compensate 28px which is the average */
-    margin-top: -28px;
+  /* The lightning-input has a label above it that takes 32px of white space in iOS, */
+  /* and 24px in Android, so compensate 28px which is the average */
+  margin-top: -28px;
 }
 
 .no-images-selected-screen {
-    height: 100%;
-    margin-top: -5rem;
+  height: 100%;
+  margin-top: -5rem;
 }
 
 .text-container {
-    margin: 0;
+  margin: 0;
 }
 
 .text-container span {
-    text-align: center;
-    padding: 0 2rem 0 2rem;
+  text-align: center;
+  padding: 0 2rem 0 2rem;
 }
 
 .square {
-    aspect-ratio : 1 / 1;
-    overflow: hidden;
+  aspect-ratio: 1 / 1;
+  overflow: hidden;
+  position: relative;
 }
 
 .square img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.square .pencil-icon {
+  height: 25px;
+  aspect-ratio: 1 / 1;
+  background-color: #747474;
+  display: flex;
+  position: absolute;
+  top: 20;
+  left: 20;
+  border-radius: 50%;
+}
+
+.square .pencil-icon span {
+  margin: auto;
+}
+
+.preview-image {
+  max-height: 100%;
+  max-width: 100%;
+  width: auto;
+  height: auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
 
 .large-icon {
-    width: 6rem;
-    height: 6rem;
+  width: 6rem;
+  height: 6rem;
 }
 
 .header-content {
-    border-bottom: gray 1px solid;
-    width: 100%;
+  border-bottom: gray 1px solid;
+  width: 100%;
 }
 
 .footer-content {
-    border-top: gray 1px solid;
-    width: 100%;
+  border-top: gray 1px solid;
+  width: 100%;
 }
 
 .page {
-    display: flex;
-    flex-flow: column;
-    height: 100%;
+  display: flex;
+  flex-flow: column;
+  height: 100%;
 }
-  
+
 .page .section.header {
-    flex: 0 1 auto;
+  flex: 0 1 auto;
 }
 
 .page .section.content {
-    display: flex;
-    flex-flow: column;
-    flex: 1 1 auto;
-    overflow-y: auto;
-    overflow-x: hidden;
-    position: relative;
+  display: flex;
+  flex-flow: column;
+  flex: 1 1 auto;
+  overflow-y: auto;
+  overflow-x: hidden;
+  position: relative;
 }
 
 .page .section.footer {
-    flex: 0 1 auto;
+  flex: 0 1 auto;
 }
