--- a/UploadAndAnnotateImages/force-app/main/default/lwc/loadingSpinner/loadingSpinner.css
+++ b/UploadAndAnnotateImages/force-app/main/default/lwc/loadingSpinner/loadingSpinner.css
@@ -1,13 +1,13 @@
 .spinner-bg {
-    background-color: rgba(0, 0, 0, 0.5);;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .spinner-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    z-index: 9051;
-    transform: translate(-50%, -50%);
-    margin-top: 3rem;
-    color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 9051;
+  transform: translate(-50%, -50%);
+  margin-top: 3rem;
+  color: white;
 }
